@startuml

title __RECENSIONE's Class Diagram__\n

  namespace com.unisa.cinehub {
    namespace model.recensione {
      interface com.unisa.cinehub.model.recensione.RecensioneRepository {
          {abstract} + bannaAllByRecensore()
      }
    }
  }
  

  namespace com.unisa.cinehub {
    namespace model.recensione {
      class com.unisa.cinehub.model.recensione.RecensioneService {
          {static} - logger : Logger
          + RecensioneService()
          + addRecensione()
          + addRisposta()
          + removeRecensione()
          + retrieveAll()
          + retrieveById()
      }
    }
  }
  

  com.unisa.cinehub.model.recensione.RecensioneService o-- com.unisa.cinehub.model.media.film.FilmService : filmService
  com.unisa.cinehub.model.recensione.RecensioneService o-- com.unisa.cinehub.model.media.serietv.PuntataService : puntataService
  com.unisa.cinehub.model.recensione.RecensioneService o-- com.unisa.cinehub.model.recensione.RecensioneRepository : recensioneRepository
  com.unisa.cinehub.model.recensione.RecensioneService o-- com.unisa.cinehub.model.utente.RecensoreRepository : recensoreRepository
  com.unisa.cinehub.model.recensione.RecensioneService o-- com.unisa.cinehub.model.media.serietv.SerieTVService : serieTVService


right footer


PlantUML diagram generated by SketchIt! (https://bitbucket.org/pmesmeur/sketch.it)
For more information about this tool, please contact philippe.mesmeur@gmail.com
endfooter

@enduml
